src/objects/Apttus_Approval__ApprovalRuleEntry__c.object
<CustomObject>
    <description>Represents a single entry in an approval rule</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalRuleId__c</fullName>
        <description>ID of the associated rule</description>
        <label>Approval Rule</label>
        <referenceTo>Apttus_Approval__ApprovalRule__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>ApprovalRuleEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AutoReapprovalCriteria__c</fullName>
        <description>The auto re-approval criteria for the step or entry</description>
        <inlineHelpText>The auto re-approval criteria for the step or entry</inlineHelpText>
        <label>Auto Reapproval Criteria</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AutoReapprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto re-approval is enabled for the step or entry. This indicator is maintained by the system.</description>
        <inlineHelpText>Indicates whether auto re-approval is enabled for the step or entry. This indicator is maintained by the system.</inlineHelpText>
        <label>Auto Reapprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ConditionFieldNames__c</fullName>
        <description>The list of field names used in criteria and conditions</description>
        <inlineHelpText>The list of field names used in criteria and conditions</inlineHelpText>
        <label>Condition Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Condition__c</fullName>
        <description>The condition specification</description>
        <label>Condition</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the criteria</description>
        <inlineHelpText>The list of field names used in the criteria</inlineHelpText>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DependsOn__c</fullName>
        <description>List of rule entry sequences which must be completed before this rule entry</description>
        <label>Depends On</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <description>The description for the entry</description>
        <inlineHelpText>The description for the entry</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension1Value__c</fullName>
        <description>The value for the first dimension. Only applicable to Matrix based rules.</description>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension2Value__c</fullName>
        <description>The value for the second dimension. Only applicable to Matrix based rules.</description>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EntryLabel__c</fullName>
        <description>The entry label</description>
        <inlineHelpText>Enter the name of a custom label containing text that will be used as the label for the entry</inlineHelpText>
        <label>Entry Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IncludePrevious__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the previous range should be included. Only applicable to Dimension rules.</description>
        <label>Include Previous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SelectValueType__c</fullName>
        <description>The select value type</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Approval Matrix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SelectValue__c</fullName>
        <description>The select value</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <description>The rule entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Rule Entry</label>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>